@@ -7,6 +7,8 @@ version 2.2.0:
 
 	Pidgin:
 	* Insert Horizontal Rules and Strikethrough text from toolbar
+	* Option to show protocol icons in the buddy list, from the
+	  Buddies > Show menu (Justin Heiner)
 
 	Finch:
 	* Per-conversation mute and logging options (accessible from the menu)
